posts feed design

--- a/src/patterns/02-organisms/03-sections/00-latest-posts.mustache
+++ b/src/patterns/02-organisms/03-sections/00-latest-posts.mustache
@@ -1,11 +1,7 @@
 <section class="section latest-posts">
-	<h2 class="section-title">Latest Posts</h2>
 	<ul class="post-list">
-		<li>{{> molecules-media-block }}</li>
-		<li>{{> molecules-media-block }}</li>
-		<li>{{> molecules-media-block }}</li>
-		<li>{{> molecules-media-block }}</li>
-		<li>{{> molecules-media-block }}</li>
+    {{#post-teasers}}
+      <li class="post-teaser--li">{{> molecules-post-teaser }}</li>
+    {{/post-teasers}}
 	</ul>
-	<a href="#" class="text-btn">View more posts</a>
 </section>
