--- a/src/scss/00-config/02-variables/_breakpoints.scss
+++ b/src/scss/00-config/02-variables/_breakpoints.scss
@@ -71,3 +71,7 @@ $bp--portfolio-overview--wide: 1024px;
 $bp--page-over-wide: $page-max-width;
 ///
 $bp--footer-small-text: max-width 400px;
+///
+$bp--post-teaser--columns: 600px;
+///
+$bp--post-teaser--re-center-image: 1000px;
