--- a/src/scss/10-base/_headings.scss
+++ b/src/scss/10-base/_headings.scss
@@ -130,6 +130,12 @@ h2 {
     display: block;
     max-width: 20em;
   }
+  a {
+    @include link-standard-heading($offset: 4px);
+    @include breakpoint($bp-typography-narrow) {
+      @include link-standard-heading($offset: 7px);
+    }
+  }
 }
 
 h3 {
