--- a/src/patterns/03-pages/04-posts-feed.mustache
+++ b/src/patterns/03-pages/04-posts-feed.mustache
@@ -3,6 +3,7 @@
 <!--HOME PAGE CONTENT-->
 <div class="page--posts-feed page-content">
   <h1 class="page-title">Posts</h1>
+  {{>organisms-latest-posts}}
 </div>
 
 {{> organisms-footer }}
