--- a/src/scss/40-components/_images.scss
+++ b/src/scss/40-components/_images.scss
@@ -10,7 +10,7 @@ svg {
   margin-bottom: $base-line-em;
   width: 100%;
   padding-bottom: 0.5rem;
-  border-bottom: 1px solid color(gray, mid);
+  border-bottom: 1px solid color(black);
   transition-property: width;
   transition-duration: 0.3s;
   transition-timing-function: ease-in-out;
@@ -21,15 +21,5 @@ svg {
   }
   @include breakpoint(1024px) {
     width: 50%;
-  }
-  .columns--2 .column--primary & {
-    float: none;
-    margin-left: 0;
-    width: 100%;
-    @include breakpoint($bp--columns-2) {
-      float: right;
-      margin-left: 2rem;
-      width: 45%;
-    }
   }
 }
