remove home page side scrolls

--- a/src/scss/40-components/_home-intro.scss
+++ b/src/scss/40-components/_home-intro.scss
@@ -16,6 +16,9 @@
   border-style: dashed;
   border-color: color(black);
   width: initial;
-  min-width: 14em;
+  min-width: 12.5em;
+  max-width: 100%;
   font-weight: 800;
+  padding-left: 3px;
+  padding-right: 3px;
 }
