--- a/src/scss/40-components/_navigation-main.scss
+++ b/src/scss/40-components/_navigation-main.scss
@@ -96,7 +96,8 @@ $navigation-count: 7;
     }
     &:nth-of-type(1n+2) {
       border-bottom: 2px solid color(gray, light);
-      margin-right: -0.5em;
+      margin-right: 0;
+      padding-right: 0;
     }
     #nav-primary-trigger:checked ~ & {
       max-height: 10em;
