--- a/src/scss/40-components/_portfolio-item.scss
+++ b/src/scss/40-components/_portfolio-item.scss
@@ -73,18 +73,15 @@ $flag-color: color(black);
   position: fixed;
   top: 0;
   left: 100vw;
-  /*left: 5vw;*/
   background-color: color(white);
   padding: 1em;
   width: 95vw;
   border-left: 0.5em solid $flag-color;
   height: 100vh;
-  //overflow-y: auto;
   z-index: 100;
   transition-property: left;
   transition-duration: 0.3s;
   transition-timing-function: ease-in-out;
-
   overflow-y: scroll; /* has to be scroll, not auto */
   -webkit-overflow-scrolling: touch;
   @include breakpoint($bp--portfolio--details-limit-width) {
@@ -230,6 +227,7 @@ $flag-color: color(black);
   justify-content: space-between;
   align-items: center;
   margin: 0 -1em 1em;
+  max-width: 100%;
   &[data-eq-state$='small'] {
     margin: 0 -3em 1em;
   }
@@ -244,6 +242,7 @@ $flag-color: color(black);
   flex-basis: 100%;
   text-align: center;
   flex-grow: 1;
+  max-width: 100%;
   img {
     width: 100%;
   }
