refactor and debug header

--- a/src/scss/00-config/02-variables/_colors.scss
+++ b/src/scss/00-config/02-variables/_colors.scss
@@ -77,7 +77,9 @@ $cs-link-background-active: $cs--link-a;
 $cs-link-background-visited: $cs--link-a;
 $cs-link-background-focus: $cs--link-b;
 $cs-link-background-bkg: $color-background;
-
+// Header Button
+$button-logo-background-color: $color-text;
+$button-logo-foreground-color: $color-background;
 
 
 
