--- a/src/scss/00-config/03-mixins/_button-logo.scss
+++ b/src/scss/00-config/03-mixins/_button-logo.scss
@@ -9,7 +9,7 @@
   font-family: font(surveyor);
   line-height: 1.2;
   width: 100%;
-  height: 6em;
+  height: 330px;
   position: relative;
   //transform:  rotate(-10deg); // @todo debug: rotation transforms break multiple text shadows on ios
   //transform: scale(0.7);
@@ -17,11 +17,10 @@
   transition-property: border-radius, width;
   transition-duration: 0.3s;
   transition-timing-function: ease-in-out;
+  //
   @include breakpoint($bp-typography-narrow) {
-  //@include breakpoint(100px) {
-    font-size: fontsize-rem(ms(5));
     border-radius: 50%;
-    width: 6em;
+    width: 330px;
   }
   @include breakpoint($bp--title-curve--shrink) {
     font-size: fontsize-rem(ms(3));
