--- a/src/scss/40-components/_portfolio-overview.scss
+++ b/src/scss/40-components/_portfolio-overview.scss
@@ -19,9 +19,10 @@
   background-position: top left;
   background-size: cover;
   background-repeat: repeat-y;
+  background-clip: padding-box;
   box-shadow: 0 1em 0 0 rgba(color(white), 0.75) inset;
-  border-top: 2px solid color(black);
-  border-bottom: 2px solid color(black);
+  border-top: 2px dashed color(black);
+  border-bottom: 2px dashed color(black);
   &.touch-detected {
     background-attachment: scroll;
     height: 150vh;
