add some candy: header button image randomizer, and batman sounds

--- a/src/patterns/02-organisms/00-global/01-footer.mustache
+++ b/src/patterns/02-organisms/00-global/01-footer.mustache
@@ -1,7 +1,7 @@
 <!-- Begin Footer -->
 <footer class="page-footer" role="contentinfo">
   <div class="footer-content">
-  <div class="monogram-wrapper">{{>molecules-monogram}}</div>
+  <div class="monogram-wrapper" id="footer-monogram">{{>molecules-monogram}}</div>
   <div class="contact">
     <div class="contact-item email">
       <a href="mailto:mason@thecodingdesigner.com" class="icon-link">{{>atoms-icon-mail}}</a>
@@ -21,4 +21,8 @@
 	</div>
   </div>
 </footer>
+
+<audio preload="auto" id="batman" >
+  <source src="../../../../src/images/audio/batman.mp3"></source>
+</audio>
 <!-- End Footer -->
