wire up the nav

--- a/src/patterns/01-molecules/05-navigation/00-primary-nav.mustache
+++ b/src/patterns/01-molecules/05-navigation/00-primary-nav.mustache
@@ -1,10 +1,11 @@
 <nav id="nav-primary" class="nav nav-primary">
   <input type="checkbox" id="nav-primary-trigger">
   <div class="nav-primary--fan"><label for="nav-primary-trigger" class="nav-primary-trigger--label">Menu</label></div>
-  <div class="nav-primary--fan"><a href="{{ url }}" class="nav-item">Home</a></div>
-  <div class="nav-primary--fan"><a href="{{ url }}" class="nav-item">Portfolio</a></div>
-  <div class="nav-primary--fan"><a href="{{ url }}" class="nav-item">Speaking</a></div>
+  <div class="nav-primary--fan"><a href="/dest/pattern-lab{{ link.pages-home }}" class="nav-item">Home</a></div>
+  <div class="nav-primary--fan"><a href="/dest/pattern-lab{{ link.pages-portfolio-item }}" class="nav-item">Portfolio</a></div>
+  <div class="nav-primary--fan"><a href="/dest/pattern-lab{{ link.pages-speaking }}" class="nav-item">Speaking</a></div>
   <div class="nav-primary--fan"><a href="https://www.instagram.com/codingdesigner/" class="nav-item">Photos</a></div>
-  <div class="nav-primary--fan"><a href="{{ url }}" class="nav-item">Posts</a></div>
-  <div class="nav-primary--fan"><a href="{{ url }}" class="nav-item">About</a></div>
+  <div class="nav-primary--fan"><a href="/dest/pattern-lab{{ link.pages-posts-feed }}" class="nav-item">Posts</a></div>
+  <div class="nav-primary--fan"><a href="/dest/pattern-lab{{ link.pages-about-page }}" class="nav-item">About</a></div>
 </nav>
+/
