create graphics templates for portfolio items

--- a/src/patterns/01-molecules/02-blocks/00-portfolio-item.mustache
+++ b/src/patterns/01-molecules/02-blocks/00-portfolio-item.mustache
@@ -36,43 +36,19 @@
   </div>
   <div class="pi--images" data-eq-pts="small: 600, mid: 800, large: 1200">
     <picture class="pi--image pi--image--wide">
-      <img src="{{img-portfolio-url}}originals/score-home-devices.png" alt="Screenshots of Score.org">
+      <img src="{{img-portfolio-url}}score/score-home-devices.png" alt="Screenshots of Score.org">
     </picture>
     <picture class="pi--image pi--image--wide">
-      <img src="{{img-portfolio-url}}originals/score-home-laptop.png" alt="Screenshots of Score.org">
+      <img src="{{img-portfolio-url}}score/score-home-laptop.png" alt="Screenshots of Score.org">
     </picture>
     <picture class="pi--image pi--image--narrow">
-      <img src="{{img-portfolio-url}}originals/score-home-phone.png" alt="Screenshots of Score.org">
+      <img src="{{img-portfolio-url}}score/score-home-phone.png" alt="Screenshots of Score.org">
+    </picture>
+    <picture class="pi--image pi--image--narrow">
+      <img src="{{img-portfolio-url}}score/score-home-menu-phone.png" alt="Screenshots of Score.org">
     </picture>
     <picture class="pi--image pi--image--medium">
-      <img src="{{img-portfolio-url}}originals/score-home-tablet.png" alt="Screenshots of Score.org">
-    </picture>
-    <picture class="pi--image pi--image--medium">
-      <img src="{{img-portfolio-url}}originals/score-home-tablet.png" alt="Screenshots of Score.org">
-    </picture>
-    <picture class="pi--image pi--image--wide">
-      <img src="{{img-portfolio-url}}originals/score-home-devices.png" alt="Screenshots of Score.org">
-    </picture>
-    <picture class="pi--image pi--image--narrow">
-      <img src="{{img-portfolio-url}}originals/score-home-phone.png" alt="Screenshots of Score.org">
-    </picture>
-    <picture class="pi--image pi--image--wide">
-      <img src="{{img-portfolio-url}}originals/score-home-laptop.png" alt="Screenshots of Score.org">
-    </picture>
-    <picture class="pi--image pi--image--medium">
-      <img src="{{img-portfolio-url}}originals/score-home-tablet.png" alt="Screenshots of Score.org">
-    </picture>
-    <picture class="pi--image pi--image--narrow">
-      <img src="{{img-portfolio-url}}originals/score-home-phone.png" alt="Screenshots of Score.org">
-    </picture>
-    <picture class="pi--image pi--image--narrow">
-      <img src="{{img-portfolio-url}}originals/score-home-phone.png" alt="Screenshots of Score.org">
-    </picture>
-    <picture class="pi--image pi--image--narrow">
-      <img src="{{img-portfolio-url}}originals/score-home-phone.png" alt="Screenshots of Score.org">
-    </picture>
-    <picture class="pi--image pi--image--narrow">
-      <img src="{{img-portfolio-url}}originals/score-home-phone.png" alt="Screenshots of Score.org">
+      <img src="{{img-portfolio-url}}score/score-home-tablet.png" alt="Screenshots of Score.org">
     </picture>
   </div>
 
