--- a/src/scss/40-components/_portfolio-overview.scss
+++ b/src/scss/40-components/_portfolio-overview.scss
@@ -17,7 +17,7 @@
   height: 75vh;
   background-attachment: fixed;
   background-position: top left;
-  background-size: cover;
+  background-size: 100% auto;
   background-repeat: repeat-y;
   background-clip: padding-box;
   box-shadow: 0 1em 0 0 rgba(color(white), 0.75) inset;
@@ -32,7 +32,7 @@
       background-image: url(../src/images/portfolio/originals/reliefweb-crisis-narrow.png);
     }
     &.score {
-      background-image: url(../src/images/portfolio/originals/score-home-narrow.png);
+      background-image: url(../src/images/portfolio/score/score-home-overview-narrow.png);
     }
   }
   @include breakpoint($bp--portfolio-overview--tween) {
@@ -40,7 +40,7 @@
       background-image: url(../src/images/portfolio/originals/reliefweb-crisis-tween.png);
     }
     &.score {
-      background-image: url(../src/images/portfolio/originals/score-home-tween.png);
+      background-image: url(../src/images/portfolio/score/score-home-overview-tween.png);
     }
   }
   @include breakpoint($bp--portfolio-overview--med) {
@@ -48,7 +48,7 @@
       background-image: url(../src/images/portfolio/originals/reliefweb-crisis-med.png);
     }
     &.score {
-      background-image: url(../src/images/portfolio/originals/score-home-med.png);
+      background-image: url(../src/images/portfolio/score/score-home-overview-med.png);
     }
   }
   @include breakpoint($bp--portfolio-overview--wide) {
@@ -56,7 +56,7 @@
       background-image: url(../src/images/portfolio/originals/reliefweb-crisis-wide.png);
     }
     &.score {
-      background-image: url(../src/images/portfolio/originals/score-home-wide.png);
+      background-image: url(../src/images/portfolio/score/score-home-overview-wide.png);
     }
   }
   @include breakpoint($bp--page-over-wide) {
