score portfolio copy

--- a/src/patterns/01-molecules/02-blocks/00-portfolio-item.mustache
+++ b/src/patterns/01-molecules/02-blocks/00-portfolio-item.mustache
@@ -15,7 +15,10 @@
       </div>
       <div class="pi--item-description">
         <h4 class="pi--item-label--about">About:</h4>
-        <div class="pi--about">{{excerpt.medium}}</div>
+        <div class="pi--about">
+          <p>I worked with SCORE to realign their design to their brand. Through discovery exercises and research I learned that the relationships they facilitate between experienced business mentors and entrepreneurs is at the core of everything they do. The arrows that point between different content items and sections are subtle reminders of those relationships.</p>
+          <p>I also wanted to connect with entrepreneurs and their passion for their businesses. The moment when an entrepreneur first holds their own business card is the moment when their dreams start to feel real. I wanted to bring that reality to this site. So I made real letterpress business cards and photographed them for the site header. The result is more tangible, and suggests that we’re ready to get down to business.</p>
+        </div>
       </div>
       <div class="pi--item-description">
         <h4 class="pi--item-label--responsibilities">Responsibilities:</h4>
