--- a/src/patterns/01-molecules/05-navigation/00-primary-nav.mustache
+++ b/src/patterns/01-molecules/05-navigation/00-primary-nav.mustache
@@ -4,7 +4,7 @@
   <div class="nav-primary--fan"><a href="../..{{ link.pages-home }}" class="nav-item">Home</a></div>
   <div class="nav-primary--fan"><a href="../..{{ link.pages-portfolio-item }}" class="nav-item">Portfolio</a></div>
   <div class="nav-primary--fan"><a href="../..{{ link.pages-speaking }}" class="nav-item">Speaking</a></div>
-  <div class="nav-primary--fan"><a href="https://www.instagram.com/codingdesigner/" class="nav-item">Photos</a></div>
+  <div class="nav-primary--fan"><a href="https://www.instagram.com/codingdesigner/" class="nav-item" target="_blank">Photos</a></div>
   <div class="nav-primary--fan"><a href="../..{{ link.pages-posts-feed }}" class="nav-item">Posts</a></div>
   <div class="nav-primary--fan"><a href="../..{{ link.pages-about-page }}" class="nav-item">About</a></div>
 </nav>
