--- a/src/patterns/02-organisms/03-sections/08-portfolio-navigation-manual.mustache
+++ b/src/patterns/02-organisms/03-sections/08-portfolio-navigation-manual.mustache
@@ -3,14 +3,20 @@
   <ul class="pn--nav-list">
     <li class="pn--nav-list-item">
       <a href="../..{{ link.pages-portfolio-item }}" class="pn--nav-list-item--link">
-        <div class="pn--nav-list-item--image"><img src="../../../../src/images/portfolio/score/score-home-thumb.png" alt="{{pn--nav-list-item--name}}"></div>
+        <div class="pn--nav-list-item--image"><img src="../../../../src/images/portfolio/score/score-home-thumb.png" alt="SCORE"></div>
         <div class="pn--nav-list-item--name">SCORE</div>
       </a>
     </li>
     <li class="pn--nav-list-item">
       <a href="../..{{ link.pages-portfolio-item-reliefweb-crisis }}" class="pn--nav-list-item--link">
-        <div class="pn--nav-list-item--image"><img src="../../../../src/images/portfolio/reliefweb-crisis/reliefweb-crisis-thumb.png" alt="{{pn--nav-list-item--name}}"></div>
+        <div class="pn--nav-list-item--image"><img src="../../../../src/images/portfolio/reliefweb-crisis/reliefweb-crisis-thumb.png" alt="UN OCHA ReliefWeb Crisis Page"></div>
         <div class="pn--nav-list-item--name">UN OCHA ReliefWeb</div>
+      </a>
+    </li>
+    <li class="pn--nav-list-item">
+      <a href="../..{{ link.pages-portfolio-item-ars-nova }}" class="pn--nav-list-item--link">
+        <div class="pn--nav-list-item--image"><img src="../../../../src/images/portfolio/ars-nova/ars-nova-home-thumb.png" alt="Ars Nova Workshop"></div>
+        <div class="pn--nav-list-item--name">Ars Nova Workshop</div>
       </a>
     </li>
   </ul>
