--- a/src/patterns/02-organisms/03-sections/08-portfolio-navigation-manual.mustache
+++ b/src/patterns/02-organisms/03-sections/08-portfolio-navigation-manual.mustache
@@ -19,5 +19,17 @@
         <div class="pn--nav-list-item--name">Ars Nova Workshop</div>
       </a>
     </li>
+    <li class="pn--nav-list-item">
+      <a href="../..{{ link.pages-portfolio-item-estee }}" class="pn--nav-list-item--link">
+        <div class="pn--nav-list-item--image"><img src="../../../../src/images/portfolio/estee/estee-home-thumb.png" alt="Ars Nova Workshop"></div>
+        <div class="pn--nav-list-item--name">Estée Lauder</div>
+      </a>
+    </li>
+    <li class="pn--nav-list-item">
+      <a href="../..{{ link.pages-portfolio-item-ars-nova }}" class="pn--nav-list-item--link">
+        <div class="pn--nav-list-item--image"><img src="../../../../src/images/portfolio/mac/mac-home-thumb.png" alt="Ars Nova Workshop"></div>
+        <div class="pn--nav-list-item--name">MAC Cosmetics</div>
+      </a>
+    </li>
   </ul>
 </nav>
