--- a/src/patterns/02-organisms/03-sections/08-portfolio-navigation-manual.mustache
+++ b/src/patterns/02-organisms/03-sections/08-portfolio-navigation-manual.mustache
@@ -21,14 +21,20 @@
     </li>
     <li class="pn--nav-list-item">
       <a href="../..{{ link.pages-portfolio-item-estee }}" class="pn--nav-list-item--link">
-        <div class="pn--nav-list-item--image"><img src="../../../../src/images/portfolio/estee/estee-home-thumb.png" alt="Ars Nova Workshop"></div>
+        <div class="pn--nav-list-item--image"><img src="../../../../src/images/portfolio/estee/estee-home-thumb.png" alt="Estée Lauder"></div>
         <div class="pn--nav-list-item--name">Estée Lauder</div>
       </a>
     </li>
     <li class="pn--nav-list-item">
       <a href="../..{{ link.pages-portfolio-item-ars-nova }}" class="pn--nav-list-item--link">
-        <div class="pn--nav-list-item--image"><img src="../../../../src/images/portfolio/mac/mac-home-thumb.png" alt="Ars Nova Workshop"></div>
+        <div class="pn--nav-list-item--image"><img src="../../../../src/images/portfolio/mac/mac-home-thumb.png" alt="MAC Cosmetics"></div>
         <div class="pn--nav-list-item--name">MAC Cosmetics</div>
+      </a>
+    </li>
+    <li class="pn--nav-list-item">
+      <a href="../..{{ link.pages-portfolio-item-marsalis }}" class="pn--nav-list-item--link">
+        <div class="pn--nav-list-item--image"><img src="../../../../src/images/portfolio/marsalis/marsalis-home-thumb.png" alt="Marsalis Music"></div>
+        <div class="pn--nav-list-item--name">Marsalis Music</div>
       </a>
     </li>
   </ul>
