--- a/src/patterns/02-organisms/03-sections/08-portfolio-navigation-manual.mustache
+++ b/src/patterns/02-organisms/03-sections/08-portfolio-navigation-manual.mustache
@@ -37,5 +37,11 @@
         <div class="pn--nav-list-item--name">Marsalis Music</div>
       </a>
     </li>
+    <li class="pn--nav-list-item">
+      <a href="../..{{ link.pages-portfolio-item-rosenbach }}" class="pn--nav-list-item--link">
+        <div class="pn--nav-list-item--image"><img src="../../../../src/images/portfolio/rosenbach/rosenbach-home-thumb.png" alt="Rosenbach Museum and Library"></div>
+        <div class="pn--nav-list-item--name">Rosenbach Museum and Library</div>
+      </a>
+    </li>
   </ul>
 </nav>
