--- a/src/patterns/02-organisms/03-sections/08-portfolio-navigation-manual.mustache
+++ b/src/patterns/02-organisms/03-sections/08-portfolio-navigation-manual.mustache
@@ -43,5 +43,11 @@
         <div class="pn--nav-list-item--name">Rosenbach Museum and Library</div>
       </a>
     </li>
+    <li class="pn--nav-list-item">
+      <a href="../..{{ link.pages-portfolio-item-sassconf-2014 }}" class="pn--nav-list-item--link">
+        <div class="pn--nav-list-item--image"><img src="../../../../src/images/portfolio/sassconf-2014/sassconf-2014-home-thumb.png" alt="SassConf 2014"></div>
+        <div class="pn--nav-list-item--name">SassConf 2014</div>
+      </a>
+    </li>
   </ul>
 </nav>
