Thinking Inside the Box Inside the Box Inside the Box

--- a/src/patterns/02-organisms/03-sections/08-portfolio-navigation-manual.mustache
+++ b/src/patterns/02-organisms/03-sections/08-portfolio-navigation-manual.mustache
@@ -49,5 +49,11 @@
         <div class="pn--nav-list-item--name">SassConf 2014</div>
       </a>
     </li>
+    <li class="pn--nav-list-item">
+      <a href="../..{{ link.pages-portfolio-item-thinking-box }}" class="pn--nav-list-item--link">
+        <div class="pn--nav-list-item--image"><img src="../../../../src/images/portfolio/thinking-box/thinking-box-thumb.png" alt="Thinking Inside the Box Inside the Box Inside the Box"></div>
+        <div class="pn--nav-list-item--name">Thinking Inside the Box</div>
+      </a>
+    </li>
   </ul>
 </nav>
