--- a/src/patterns/02-organisms/03-sections/08-portfolio-navigation-manual.mustache
+++ b/src/patterns/02-organisms/03-sections/08-portfolio-navigation-manual.mustache
@@ -55,5 +55,11 @@
         <div class="pn--nav-list-item--name">Thinking Inside the Box</div>
       </a>
     </li>
+    <li class="pn--nav-list-item">
+      <a href="../..{{ link.pages-portfolio-item-usa }}" class="pn--nav-list-item--link">
+        <div class="pn--nav-list-item--image"><img src="../../../../src/images/portfolio/usa/usa-home-thumb.png" alt="USA Network"></div>
+        <div class="pn--nav-list-item--name">USA Network</div>
+      </a>
+    </li>
   </ul>
 </nav>
