--- a/src/patterns/02-organisms/03-sections/09-portfolio-item.mustache
+++ b/src/patterns/02-organisms/03-sections/09-portfolio-item.mustache
@@ -12,7 +12,9 @@
       <div class="pi--item-description">
         <h4 class="pi--item-label--client">Client:</h4>
         <div class="pi--client">{{{pi--item-label--client}}}</div>
-        <div class="pi--item-label--link"><a href="{{pi--item-label--link}}">{{pi--item-label--link--domain}}</a></div>
+        {{#pi--item-label--link--show}}
+          <div class="pi--item-label--link"><a href="{{pi--item-label--link}}">{{pi--item-label--link--domain}}</a></div>
+        {{/pi--item-label--link--show}}
       </div>
       <div class="pi--item-description">
         <h4 class="pi--item-label--about">About:</h4>
