--- a/src/patterns/03-pages/00-home.mustache
+++ b/src/patterns/03-pages/00-home.mustache
@@ -7,6 +7,7 @@
     {{> organisms-intro}}
   {{/intro}}
   {{>organisms-portfolio-overview}}
+  {{>molecules-tweet-rwd-hard}}
 </div>
 
 {{> organisms-footer }}
