add clarity to home page portfolio overview

--- a/src/patterns/01-molecules/02-blocks/12-portfolio-overview-item.mustache
+++ b/src/patterns/01-molecules/02-blocks/12-portfolio-overview-item.mustache
@@ -1,4 +1,5 @@
 <div class="portfolio-overview--item">
   <h3 class="po-item--name"><a href="">{{item-name}}</a></h3>
+  <a href="../..{{ link.pages-portfolio-item }}" class="portfolio--view-full-item">View full portfolio item</a>
   <a href="" class="po-item--link {{class}}"></a>
 </div>
