--- a/src/patterns/02-organisms/03-sections/07-portfolio-overview.mustache
+++ b/src/patterns/02-organisms/03-sections/07-portfolio-overview.mustache
@@ -3,4 +3,5 @@
   {{#portfolio-overview--items}}
     {{>molecules-portfolio-overview-item}}
   {{/portfolio-overview--items}}
+  <div class="portfolio--view-all"><a href="../..{{ link.pages-portfolio-item }}">View full portfolio</a></div>
 </div>
