--- a/src/patterns/03-pages/05-post-page.mustache
+++ b/src/patterns/03-pages/05-post-page.mustache
@@ -2,7 +2,8 @@
 
 <!--HOME PAGE CONTENT-->
 <div class="page--posts-page page-content">
-  {{>organisms-post}}
+  <h1 class="page-title">{{ post-title }}</h1>
+  {{{ post-content }}}
 </div>
 
 {{> organisms-footer }}
