--- a/src/patterns/02-organisms/06-content/00-about.mustache
+++ b/src/patterns/02-organisms/06-content/00-about.mustache
@@ -1,7 +1,7 @@
 <h1 class="page-title">About Mason Wendell</h1>
 <article class="page">
   <div class="feature-image">
-    {{>atoms-landscape-16x9}}
+    <img src="../../../../src/images/headshots/sassconf-podium.jpg" alt="Mason Wendell podium" />
   </div>
   <p>Mason Wendell is a Responsive Web Design, UX and Visual Design, Sass and CSS expert. He's passionate about getting to the core of what a client needs and turning that into the right design solution. He's a pioneer of the technique of using code to create designs directly in the browser. This gives him a unique perspective to find innovative ways to solve design challenges for his clients. </p>
   <p>He's a leader and innovator in using Sass to write styles. He created the popular Breakpoint tool for responsive web design. He's the co-creator of Sassy Modular Scale which helps to create beautiful typography.</p>
