--- a/src/scss/40-components/_images.scss
+++ b/src/scss/40-components/_images.scss
@@ -10,7 +10,7 @@ svg {
   margin-bottom: $base-line-em;
   width: 100%;
   padding-bottom: 0.5rem;
-  border-bottom: 1px solid color(black);
+  //border-bottom: 1px solid color(black);
   transition-property: width;
   transition-duration: 0.3s;
   transition-timing-function: ease-in-out;
