fun organic image shape

--- a/src/patterns/02-organisms/06-content/00-about.mustache
+++ b/src/patterns/02-organisms/06-content/00-about.mustache
@@ -1,6 +1,6 @@
 <h1 class="page-title">About Mason Wendell</h1>
 <article class="page">
-  <div class="feature-image">
+  <div class="feature-image organic">
     <img src="../../../../src/images/headshots/sassconf-podium.jpg" alt="Mason Wendell podium" />
   </div>
   <p>Mason Wendell is a Responsive Web Design, UX and Visual Design, Sass and CSS expert. He's passionate about getting to the core of what a client needs and turning that into the right design solution. He's a pioneer of the technique of using code to create designs directly in the browser. This gives him a unique perspective to find innovative ways to solve design challenges for his clients. </p>
