--- a/src/patternlab-files/styleguide.mustache
+++ b/src/patternlab-files/styleguide.mustache
@@ -69,6 +69,7 @@
 		<script src="../../styleguide/js/annotations-pattern.js"></script>
 		<script src="../../styleguide/js/code-pattern.js"></script>
     <!-- inject:js -->
+    <script src="../../../../bower_components/jquery/jquery.js"></script>
     <script src="../../../../bower_components/lodash/lodash.js"></script>
     <script src="../../../../bower_components/eq.js/dist/eq.min.js"></script>
     <script src="../../../../bower_components/highlightjs/highlight.pack.js"></script>
