fix nav for windows

--- a/src/scss/40-components/_navigation-main.scss
+++ b/src/scss/40-components/_navigation-main.scss
@@ -58,6 +58,8 @@
   }
   @include breakpoint($bp--navigation--wide) {
     position: absolute;
+    left: 0;
+    right: 0;
     list-style-type: none;
     margin-left: -9em;
     padding-left: 10em;
